--- a/index.html
+++ b/index.html
@@ -4,160 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Will You Marry Me?</title>
-
-  <style>
-    body {
-      height: 100vh;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      font-family: "Comic Sans MS", cursive;
-      overflow: hidden;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 3rem;
-      color: white;
-      margin-bottom: 20px;
-    }
-
-    #buttons {
-      position: relative;
-      width: 520px;
-      height: 300px;
-      max-width: 90vw;
-    }
-
-    button {
-      position: absolute;
-      padding: 16px 38px;
-      font-size: 1.3rem;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-      user-select: none;
-    }
-
-    #yes {
-      left: 50%;
-      top: 60%;
-      transform: translate(-50%, -50%) scale(1);
-      background: #4caf50;
-      color: white;
-    }
-
-    #no {
-      left: 20%;
-      top: 60%;
-      background: #f44336;
-      color: white;
-    }
-
-    #quote {
-      margin-top: 20px;
-      font-size: 1.4rem;
-      color: white;
-      min-height: 40px;
-    }
-
-    /* 📱 Mobile tweaks */
-    @media (max-width: 600px) {
-      h1 { font-size: 2.2rem; }
-      button {
-        font-size: 1.4rem;
-        padding: 18px 40px;
-      }
-      #buttons {
-        height: 260px;
-      }
-    }
-  </style>
-</head>
-
 <body>
-
-  <h1>Will you marry me? 💍</h1>
-
-  <div id="buttons">
-    <button id="yes">YES 😍</button>
-    <button id="no">NO 🙈</button>
-  </div>
-
-  <div id="quote"></div>
-
-  <script>
-    const noBtn = document.getElementById("no");
-    const yesBtn = document.getElementById("yes");
-    const container = document.getElementById("buttons");
-    const quoteDiv = document.getElementById("quote");
-
-    const quotes = [
-      "NO button is scared 😂",
-      "Wrong choice detected 🚨",
-      "That was close 😆",
-      "Free food included 🍕",
-      "Running won’t help 🏃‍♂️💨",
-      "Just say YES already 🥺",
-      "Come on… I make great coffee ☕😉",
-      "Think again 😏",
-      "We’ll be legendary 😎💍",
-      "You know YES is the right answer ❤️",
-      "Free lifetime hugs included 🤗",
-      "Ena paatha paavama ilaya 🥺💖",
-      "You know extrovert girl and introvert boy makes the best pair 😁",
-      "You dont have another choice 😄",
-      "Doctor and Engineer makes best pair Think again 😃",
-      "Yes perusu aayte iruku apo kuda no try panriye 🥺.",
-      "Pesaama yes Sollidu"
-    ];
-
-    let yesScale = 1;
-
-    function escapeNoButton() {
-      const maxX = container.clientWidth - noBtn.offsetWidth;
-      const maxY = container.clientHeight - noBtn.offsetHeight;
-
-      noBtn.style.left = Math.random() * maxX + "px";
-      noBtn.style.top = Math.random() * maxY + "px";
-
-      yesScale += 0.12;
-      yesBtn.style.transform =
-        `translate(-50%, -50%) scale(${yesScale})`;
-
-      quoteDiv.textContent =
-        quotes[Math.floor(Math.random() * quotes.length)];
-    }
-
-    /* 💻 Desktop: mouse proximity */
-    container.addEventListener("mousemove", (e) => {
-      const rect = noBtn.getBoundingClientRect();
-      const distance = Math.hypot(
-        e.clientX - (rect.left + rect.width / 2),
-        e.clientY - (rect.top + rect.height / 2)
-      );
-
-      if (distance < 90) escapeNoButton();
-    });
-
-    /* 📱 Mobile: touch */
-    noBtn.addEventListener("touchstart", (e) => {
-      e.preventDefault();
-      escapeNoButton();
-    });
-
-    yesBtn.addEventListener("click", () => {
-      document.body.innerHTML = `
-        <h1 style="color:white;font-size:3rem">
-          😁 YAAAY! Best decision ever 💍❤️
-        </h1>
-      `;
-    });
-  </script>
-
-</body>
+  <p> If you ever seeing this I want to let you know I never doubted you.</p>
+  <p> It was not until fights, I realised the context. I had a whole different interpretation of incident. I thought you were hurt bcz you really liked me and i never understood it. but later only I understood you were under the misconception</p>
+  <p> For what I can say is I never asked about any of your previous relationship ever. If I had ever doubted you I would have directly asked it</p>
+  <p> I know its hard to believe, but that is the truth. This may never change what hapened</p>
+  <p> But just wanted you to forgive and not curse me. All of the incidednt could have been avoided if you ever replied calm to me or if I handled it better</p>
+  <p>whatever happened happended. Wish you all success in life and future. </p>
+ </body>
 </html>
