--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <p> For what I can say is I never asked about any of your previous relationship ever. If I had ever doubted you I would have directly asked it</p>
   <p> I know its hard to believe, but that is the truth. This may never change what hapened</p>
   <p> But just wanted you to forgive and not curse me. All of the incidednt could have been avoided if you ever replied calm to me or if I handled it better</p>
+  <p>After all what happened, I didnt have energy or courage to ping you </p>p>
   <p>whatever happened happended. Wish you all success in life and future. </p>
  </body>
 </html>
